--- a/finance/templates/finance/Register.html
+++ b/finance/templates/finance/Register.html
@@ -54,6 +54,15 @@
                 Register
             </button>
         </form>
+        <div class="text-center space-y-2">
+    <p class="text-sm text-gray-600 mt-5">
+        ALREADY HAVE AN ACCOUNT?
+        <a href="{% url 'login' %}" class="font-medium text-indigo-600 hover:text-indigo-500 transition duration-150 ease-in-out">
+            Login Here
+        </a>
+    </p>
+</div>
+
     </div>
 </div>
 {% endblock content %}
