--- a/finance/templates/finance/base.html
+++ b/finance/templates/finance/base.html
@@ -8,8 +8,27 @@
 <body class="bg-gray-900 min-h-screen">
 
     <nav class="bg-indigo-500 p-4 text-white">
+        
+        {% if user.is_authenticated %}
+         <form id="logout-form" 
+              action="{% url 'logout' %}" 
+              method="POST" style="display: inline;">
+
+            {% csrf_token %}
+
+            <a href="#" onclick="document.getElementById('logout-form').submit();"
+               class="ml-4">Logout</a>
+        </form>
+        
+        {% else %}
+
         <a href="{% url 'login' %}" class="ml-4 hover:underline">Login</a>
         <a href="{% url 'register' %}" class="ml-4 hover:underline">Register</a>
+
+        {% endif %}
+       
+
+     
     </nav>
 
     <div class="container mx-auto mt-6">
